--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^4.0.0-0",
+    "vue3-quill": "^0.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
