--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve-dev": "vue-cli-service serve --mode dev",
+    "build_dev": "vue-cli-service build --mode dev",
+    "serve-test": "vue-cli-service serve --mode test",
+    "build_test": "vue-cli-service build --mode test",
+    "serve-pro": "vue-cli-service serve --mode pro",
+    "build_pro": "vue-cli-service build --mode pro",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
