--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "element-plus": "^1.2.0-beta.5",
     "highlight.js": "^10.7.3",
     "marked": "^4.0.4",
     "vue": "^3.0.0",
