--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build_dev": "vue-cli-service build --mode dev",
     "serve-test": "vue-cli-service serve --mode test",
     "build_test": "vue-cli-service build --mode test",
-    "serve-pro": "vue-cli-service serve --mode pro",
-    "build_pro": "vue-cli-service build --mode pro --report",
+    "serve": "vue-cli-service serve --mode pro",
+    "build": "vue-cli-service build --mode pro --report",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
